--- a/index.html
+++ b/index.html
@@ -225,7 +225,8 @@
         <div class="hero">
           <div class="content has-text-justified">
             <div class="item">
-              <p>Video source from <a href="https://v.qq.com/x/cover/mzc00200vkqr54u/v4100nsh6z8.html" target="_blank">Tencent Video</a>
+              <p>Video source from <a href="https://v.qq.com/x/cover/mzc00200vkqr54u/v4100nsh6z8.html"
+                  target="_blank">Tencent Video</a>
               </p>
               <video src="static/02.mp4" alt="MY ALT TEXT" loop controls></video>
               <video src="static/02original.mp4" alt="MY ALT TEXT" loop controls></video>
@@ -250,73 +251,14 @@
         <div class="hero">
           <div class="content has-text-justified">
             <div class="item">
-              <p class="is-size-6 has-text-centered">
-                Efficiency Improvement with AMS
-              </p>
-              <table class="table is-fullwidth is-bordered mt-4">
-                <thead>
-                  <tr>
-                    <th>Workflow Steps</th>
-                    <th>Traditional Method</th>
-                    <th>AMS Solution</th>
-                    <th>Efficiency Gain</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>Content Search</td>
-                    <td>Manual scanning through video timeline (30-60 mins)</td>
-                    <td>Instant semantic search with precise timestamp (5-10 seconds)</td>
-                    <td><strong>↓ 98% time</strong></td>
-                  </tr>
-                  <tr>
-                    <td>Scene Analysis</td>
-                    <td>Manual review and note-taking (45-90 mins)</td>
-                    <td>Automated multi-modal understanding with character and plot detection (instant)</td>
-                    <td><strong>↓ 99% time</strong></td>
-                  </tr>
-                  <tr>
-                    <td>Clip Extraction</td>
-                    <td>Manual trimming and exporting (15-30 mins)</td>
-                    <td>Precise timestamp-based extraction (2-3 seconds)</td>
-                    <td><strong>↓ 95% time</strong></td>
-                  </tr>
-                  <tr>
-                    <td>AI Integration</td>
-                    <td>Limited or no AI support</td>
-                    <td>
-                      - Direct integration with editing AI agents<br>
-                      - Automated post-production<br>
-                      - Smart content recommendations
-                    </td>
-                    <td><strong>New capability</strong></td>
-                  </tr>
-                  <tr>
-                    <td>Workflow Automation</td>
-                    <td>Multiple manual steps and tools</td>
-                    <td>
-                      - One-click search and extract<br>
-                      - Automated scene tagging<br>
-                      - Batch processing support
-                    </td>
-                    <td><strong>↓ 90% complexity</strong></td>
-                  </tr>
-                  <tr>
-                    <td>Scalability</td>
-                    <td>Linear time increase with video length</td>
-                    <td>Constant search time regardless of video length</td>
-                    <td><strong>Exponential improvement</strong></td>
-                  </tr>
-                </tbody>
-              </table>
-              <p class="is-size-7 has-text-centered mt-3">
-                * Results based on average processing time for 2-hour video content
-              </p>
+              <p class="has-text-centered">ActorVoice Pipeline</p>
+            </div>
+            <div class="item">
+              <img src="static/gram.png" />
             </div>
           </div>
         </div>
       </div>
-    </div>
   </section>
 
 
